fix: resolve layered architecture violations
- Fix infrastructure layer direct dependency on domain layer
- Remove cross-layer dependencies between interfaces and other layers
- Eliminate duplicate adapter implementations
- Mark duplicate domain events as deprecated
- Rename DTO classes to avoid naming conflicts
- Modify ResponseFactory to use basic types instead of domain types
- Update architecture tests to ignore standard library dependencies
- Exclude internal classes from package structure tests

All architecture tests now pass successfully.